# BERT4Rec_tf2x_prod_pipeline

./: .gitignore  Makefile  README.md  dvc.yaml  pyproject.toml  requirements.txt
.dvc/: config
config/: bert_config.json  dvc_simple.yaml  dvc_template.yaml  emb_var_name.txt
notebooks/: check_data_ml-1m.ipynb  predictions_exp.ipynb
projects/ml-1m/config/: bert_config_ml-1m.json  config_mlflow.yaml  data_config_ml-1m.json  train_config_ml-1m.json
projects/ml-1m/models/final_model/: checkpoint  events.out.tfevents.1697796224.maria-B550-GAMING-X-V2  graph.pbtxt  model.ckpt-196000.data-00000-of-00001  model.ckpt-196000.index  model.ckpt-197000.data-00000-of-00001  model.ckpt-197000.index  model.ckpt-198000.data-00000-of-00001  model.ckpt-198000.index  model.ckpt-199000.data-00000-of-00001  model.ckpt-199000.index  model.ckpt-200000.data-00000-of-00001  model.ckpt-200000.index
projects/ml-1m/models/final_model/config/: data_config_ml-1m.json  test_config_ml-1m.json
projects/ml-1m/models/final_model/eval/: events.out.tfevents.1697798225.maria-B550-GAMING-X-V2
projects/ml-1m/references/: ml-1m.vocab
projects/ml-1m/results/final_model/: df_next_sids.pkl  df_next_sids_embs.pkl  test_results.txt
src/bert4rec/: data_processing.py  main_processes.py  modeling.py
src/data_processing/: data_processing_all.py  data_processing_raw.py
src/train_test_inf/: inference.py  test.py  train_val.py
src/utils/: dvc_create.py  make_exp.py  utils.py  vocab.py
